# marketing_agent_from_template

./: .env.example  .geminiignore  .gitignore  AGENT_DESIGN.md  BIGQUERY_MCP_AUTH.md  DESIGN_SPEC.md  DEVELOPMENT_FLOW.md  GEMINI.md  Makefile  README.md  ci.sh  deployment_metadata.json  pyproject.toml  setup_gcp.sh
.githooks/: pre-merge-commit
.github/workflows/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agents/: agent.py  agent_engine_app.py
agents/app_utils/: deploy.py  telemetry.py  typing.py
agents/loop_agent/: agent.py
agents/marketing_agent/: agent.py  customer_schema.json  marketing_tasks.evalset.json
agents/marketing_agent/.adk/: session.db
agents/sequential_agent/: __init__.py  agent.py
agents/shared/: plugins.py  tools.py
agents/simple_agent/: agent.py
agents/simple_agent/.adk/: session.db
agents/simple_agent/.adk/eval_history/: simple_agent_simple_search_test_1774424397.8900852.evalset_result.json
agents/subagents_agent/: agent.py
app/: loop.py  sequential.py  simple_agent.py  subagents.py  tools.py
deployment/terraform/: .terraform.lock.hcl  backend.tf  github.tf  locals.tf  service.tf  service_accounts.tf  telemetry.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/vars/: env.tfvars
frontend/: app.py  backends.py
frontend/static/: index.html
tests/: test_agents.py  test_tools.py
tests/eval/: eval_config.json
tests/eval/evalsets/: marketing_campaign.evalset.json  marketing_tasks.evalset.json  simple_search.json
(+1 files in other folders)
